trunk/Archive2/c4/bf9c45ca6cdf7b/output
main.cpp:8:13: error: variable or field 'f' declared void
 extern void f;
             ^
